# robo_code

./: .gitignore  README.md
pointNet++/: test_partseg.py  test_path.py  train_partseg.py
pointNet++/data_utils/: ShapeNetDataLoader.py
point_pkg/: CMakeLists.txt  package.xml
prepart_pkg/: CMakeLists.txt  package.xml
prepart_pkg/include/: preTreat.h
prepart_pkg/src/: main.cpp  preTreat.cpp  vtkTest.cpp
